force-app/main/default/objects/Contact/fields/Account_Adresse__c.field-meta.xml
<CustomField>
    <fullName>Account_Adresse__c</fullName>
    <formula>Account.BillingStreet + BR() + Account.BillingPostalCode + &quot; &quot; + Account.BillingCity + BR() + Account.BillingCountry</formula>
    <label>Account Adresse</label>
    <type>Text</type>
</CustomField>