force-app/main/default/objects/Contact/fields/Hausnummer_parsed__c.field-meta.xml
<CustomField>
    <fullName>Hausnummer_parsed__c</fullName>
    <formula>RIGHT(
  MailingStreet,
  LEN(MailingStreet) - MIN(
    IF(FIND(&quot;0&quot;, MailingStreet) = 0, 999, FIND(&quot;0&quot;, MailingStreet)),
    IF(FIND(&quot;1&quot;, MailingStreet) = 0, 999, FIND(&quot;1&quot;, MailingStreet)),
    IF(FIND(&quot;2&quot;, MailingStreet) = 0, 999, FIND(&quot;2&quot;, MailingStreet)),
    IF(FIND(&quot;3&quot;, MailingStreet) = 0, 999, FIND(&quot;3&quot;, MailingStreet)),
    IF(FIND(&quot;4&quot;, MailingStreet) = 0, 999, FIND(&quot;4&quot;, MailingStreet)),
    IF(FIND(&quot;5&quot;, MailingStreet) = 0, 999, FIND(&quot;5&quot;, MailingStreet)),
    IF(FIND(&quot;6&quot;, MailingStreet) = 0, 999, FIND(&quot;6&quot;, MailingStreet)),
    IF(FIND(&quot;7&quot;, MailingStreet) = 0, 999, FIND(&quot;7&quot;, MailingStreet)),
    IF(FIND(&quot;8&quot;, MailingStreet) = 0, 999, FIND(&quot;8&quot;, MailingStreet)),
    IF(FIND(&quot;9&quot;, MailingStreet) = 0, 999, FIND(&quot;9&quot;, MailingStreet))
  ) + 1
)</formula>
    <label>Hausnummer</label>
    <type>Text</type>
</CustomField>