force-app/main/default/objects/Contact/fields/Next_Reminder__c.field-meta.xml
<CustomField>
    <fullName>Next_Reminder__c</fullName>
    <label>Nächste Erinnerung</label>
    <type>Date</type>
</CustomField>