force-app/main/default/objects/Contact/fields/Xing_URL__c.field-meta.xml
<CustomField>
    <fullName>Xing_URL__c</fullName>
    <label>Xing URL</label>
    <type>Url</type>
</CustomField>